# wasm_platform_assignment

./: .dockerignore  .env.example  Auth.dockerfile  Backend.dockerfile  CHANGELOG  Cargo.toml  Dashboard.dockerfile  LICENSE  docker-compose.yml
auth/: Cargo.toml
auth/src/: main.rs
backend/: Cargo.toml
backend/src/: cache.rs  constants.rs  extractors.rs  ffi.rs  lib.rs  metrics.rs  utils.rs
backend/src/auth/: jwt.rs  keys.rs  mod.rs  requests.rs
backend/src/entities/: function.rs  mod.rs  module.rs  prelude.rs  user.rs  wallet.rs
backend/src/migrator/: m20230328_000001_users_table.rs  m20230328_000002_modules_table.rs  m20230329_000003_wallets_table.rs  m20230329_000004_functions_table.rs  mod.rs
backend/src/routes/: fallback.rs  functions.rs  metrics.rs  mod.rs  modules.rs  user.rs
common/: Cargo.toml
common/src/api/: auth.rs  errors.rs  mod.rs  requests.rs  responses.rs
dashboard/: .prettierrc  package.json  pnpm-lock.yaml
dashboard/src/: ApiTypes.ts  App.svelte  app.css  auth.ts  modules.ts
dashboard/src/lib/: Function.svelte  Login.svelte  LogoutButton.svelte  Module.svelte  ModuleList.svelte  ModuleUpload.svelte
grafana_provisioning/dashboards/: serverless.yml
grafana_provisioning/dashboards/dash/: Node_Exporter_Full-1684635470431.json  Serverless_WASM_Copy-1684635647335.json
grafana_provisioning/datasources/: backend_prometheus.yml
prometheus/: prometheus.yml
traefik/: tls.yml  traefik.yml
