[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.17"

tower-http = { version = "0.4.0", features = ["cors"] }
jsonwebtoken = "8.3.0"
tracing = "0.1.37"
lazy_static = "1.4.0"
reqwest = { version = "0.11.17", features = ["json"] }
